--- a/MusicBot/MusicBot.csproj
+++ b/MusicBot/MusicBot.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Discord.Net" Version="2.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="Victoria" Version="5.2.3" />
   </ItemGroup>
 
   <ItemGroup>
